<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Progressive Metronome</string>
    <string name="action_settings">Settings</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="tempo_marking">Tempo</string>
    <string name="increment">Set Incrementer</string>
    <string name="title_activity_incrementor">Progress Tempo</string>
    <string name="hello_world">Hello world!</string>
    <string name="starting_tempo">Starting Tempo</string>
    <string name="ending_tempo">Ending Tempo</string>
    <string name="number_of_measures">Number of measures to practice</string>
    <string name="amount_of_increase">Amount of tempo increase per repeat (in beats)</string>
    <string name="count_in">Count-in/Delay before start</string>
    <string name="repetitions">Number of repetitions at each tempo</string>
    <string name="beats_per_measure">Beats per measure</string>
    <string name="title_activity_countint">CountintActivity</string>
    <string name="title_activity_countin">CountinActivity</string>
    <string name="title_activity_play_incremented_section">PlayIncrementedSectionActivity</string>
    <string name="count_in_prompt">Enter Count-in/Delay value in beats and press Start Increment Metronome</string>
    <string name="start_increment">Start Increment Section</string>
    <string name="time_signature">Time Signature</string>
    <string name="start_practice_section">Start Practice Section</string>
    <string name="stop_practice_section">Stop Practice Section</string>
    <string name="countdown">Count Down</string>
    <string name="start_countdown">Start CountDown</string>
    <string name="time_signature_numerator_prompt">4</string>
    <string name="time_signature_dividor">/</string>
    <string name="time_signature_denominator_prompt">4</string>
    <string name="accent_selection">Emphasis</string>
    <string name="play_practice_section">Play Practice Section</string>

    <string-array name="time_signature_numerator_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    <string-array name="time_signature_denominator_array">
        <item>4</item>
        <item>8</item>
    </string-array>
    <string-array name="accent_selection_array">
        <item>1st Beat</item>
        <item>2nd Beat</item>
        <item>3rd Beat</item>
        <item>4th Beat</item>
        <item>5th Beat</item>
        <item>6th Beat</item>
        <item>7th Beat</item>
        <item>8th Beat</item>
    </string-array>
    <string-array name="subdivision_selection_array">
        <item>Quarter Note</item>
        <item>Triplet</item>
        <item>Eighth Note</item>
        <item>Sixteenth Note</item>
        <item>Quintuplets</item>
        <item>Sextuplets</item>
    </string-array>

    <string-array name="secondary_subdivision_selection_array">
        <item>Eighth Note</item>
        <item>Sixteenth Note</item>
        <item>Sixteenth Note Triplets</item>
    </string-array>

    <string-array name="time_signature_numerator_array_practice_section">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    <string-array name="time_signature_denominator_array_practice_section">
        <item>2</item>
        <item>4</item>
        <item>8</item>
    </string-array>
    <string-array name="accent_selection_array_practice_section">
        <item>1st Beat</item>
        <item>2nd Beat</item>
        <item>3rd Beat</item>
        <item>4th Beat</item>
        <item>5th Beat</item>
        <item>6th Beat</item>
        <item>7th Beat</item>
        <item>8th Beat</item>
    </string-array>
    <string-array name="subdivision_selection_array_practice_section">
        <item>Quarter Note</item>
        <item>Triplet</item>
        <item>Eighth Note</item>
        <item>Sixteenth Note</item>
        <item>Quintuplets</item>
        <item>Sextuplets</item>
    </string-array>

    <string-array name="secondary_subdivision_selection_array_practice_section">
        <item>Eighth Note</item>
        <item>Sixteenth Note</item>
        <item>Sixteenth Note Triplets</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
