<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ff000000">

    <TextView android:layout_width="275dp"
        android:textColor="#FFFFFFFF"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#AA0114"
        android:layout_gravity="center"
        android:layout_centerInParent="true"
        android:id="@+id/countDown"
        android:textSize="80dp"
        android:editable="true"
        />


    <Button
        android:id="@+id/start_countdown_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:text="@string/start_countdown"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"/>


    <Button
        android:id="@+id/start_increment_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:onClick="StartIncrementSection"
        android:background="@drawable/button"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:text="@string/start_practice_section"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"/>


    <Button
        android:id="@+id/stop_increment_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:text="@string/stop_practice_section"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>