<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="org.michaelfrederickson.progressivemetronome.PlayIncrementedSectionActivity"
    android:layout_marginTop="0dp"
    android:gravity="center"
    android:orientation="vertical"
    android:background="#ff000000"

    >

    <TextView android:layout_width="275dp"
        android:textColor="#FFFFFFFF"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#AA0114"
        android:layout_gravity="center"
        android:layout_centerInParent="true"
        android:id="@+id/countDown"
        android:textSize="40dp"
        android:editable="true"
        />


    <Button
        android:id="@+id/start_countdown_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:onClick="beginCountdown"
        android:background="@drawable/button"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:text="@string/start_countdown"
        android:layout_marginTop="10dp"/>


    <Button
        android:id="@+id/start_increment_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:onClick="StartIncrementSection"
        android:background="@drawable/button"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:text="@string/start_practice_section"
        android:layout_marginTop="10dp"/>


    <Button
            android:id="@+id/stop_increment_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:text="@string/stop_practice_section"
            android:layout_marginTop="20dp"/>



    </LinearLayout>
