<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MetronomeActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp"
        android:background="#ff000000"
        android:orientation="vertical">

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:textSize="50dp"
        android:textColor="#FFFFFF"
        android:text="@string/tempo_marking"
        android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:background="#000000">

        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
            android:textSize="40dp"
	        android:textColor="#FFFFFF"
	        android:id="@+id/tempo"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="15dp"
            android:layout_gravity="center_horizontal"/>

        </LinearLayout>

        <SeekBar
	        android:id="@+id/slider"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" 
	        android:layout_marginBottom="5dp"/>

        <TextView
            android:id="@+id/beats_per_measure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:text="@string/time_signature"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center_horizontal"
            />
	
	        
		    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:orientation="horizontal" >
				
				<Spinner
		        android:layout_width="wrap_content"
		        android:layout_height="45dp"
		        android:layout_gravity="center"
		        android:textSize="15dp"
		        android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
		        android:textColor="#FFFFFF"
		        android:id="@+id/time_signature_numerator"
                android:drawSelectorOnTop="true"
                android:spinnerMode="dropdown"
                android:entries="@array/time_signature_numerator_array"
                />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="35dp"
                    android:layout_marginRight="10dp"
                    android:textColor="#FFFFFF"
                    android:id="@+id/time_siganture_divider"
                    android:text="/"/>

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:textSize="15dp"
                    android:textColor="#FFFFFF"
                    android:id="@+id/time_signature_denominator"
                    android:drawSelectorOnTop="true"
                    android:spinnerMode="dropdown"
                    android:entries="@array/time_signature_denominator_array"
                    />
				
			</LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
            android:id="@+id/accent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:text="@string/accent_selection"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="left"/>

            <Spinner
                android:id="@+id/accent_selection_spinner"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:layout_gravity="right"
                android:textSize="40dp"
                android:layout_marginRight="20dp"
                android:textColor="#FFFFFF"
                android:drawSelectorOnTop="true"
                android:spinnerMode="dropdown"
                android:entries="@array/accent_selection_array"
                android:layout_marginTop="15dp"
                android:layout_alignParentRight="true"
                />



            </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:textSize="20dp"
                android:layout_marginRight="10dp"
                android:textColor="#FFFFFF"
                android:text="Subdivision"/>



            <Spinner
                android:layout_width="225dp"
                android:layout_height="50dp"
                android:id="@+id/subdivision_selection_spinner"
                android:layout_gravity="right"
                android:maxHeight="70dp"
                android:layout_marginRight="5dp"/>


            </LinearLayout>




	   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60px"
		android:gravity="center"
        android:orientation="horizontal" >
				
		   
		    <Button
		        android:id="@+id/stop"
		        android:layout_width="100dp"
		        android:layout_height="wrap_content"
		        android:onClick="stop"
		        android:background="@drawable/button"
		        android:textColor="#FFFFFF"
		        android:textStyle="bold"
		        android:text="@string/stop" />
		    
		     <Button
		        android:id="@+id/start"
		        android:layout_width="100dp" 
		        android:layout_height="wrap_content"
		        android:onClick="start"
		        android:layout_marginLeft="30px"
		        android:background="@drawable/button"
		        android:textColor="#FFFFFF"
		        android:textStyle="bold"
		        android:text="@string/start" />

              <Button
               android:id="@+id/increment"
               android:layout_width="100dp"
               android:layout_height="wrap_content"
               android:onClick="openSelectMetronomeTypeFramgment"
               android:layout_marginLeft="30px"
               android:background="@drawable/button"
               android:textColor="#FFFFFF"
               android:textStyle="bold"
               android:text="@string/title_activity_incrementor" />
		     
	    </LinearLayout>
	
    </LinearLayout>

</LinearLayout>
